--- a/docs/styles.css
+++ b/docs/styles.css
@@ -168,3 +168,12 @@ body {
     left: 0;
     background-color: #5000ca;
 }
+form {
+    width: 800px;
+}
+
+@media only screen and (max-width: 800px) {
+    form {
+        width: 100%;
+    }
+}
